# music-assistant-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/music_assistant_mcp/: __main__.py  connection.py  resources.py  serializers.py  server.py
src/music_assistant_mcp/tools/: library.py  playback.py  playlists.py  queue.py  search.py
